--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- Include a required theme -->
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 		<meta charset="utf-8">
-		<title>𝗛𝗔 𝗗𝗨𝗖 𝗗𝗨𝗬 | 𝗛𝗢𝗠𝗘</title>
+		<title>HA DUC DUY | HOME</title>
 		<style type="text/css">
 			/* CSS Document */
 			* {
