--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	</head>
 	<body onclick="audio.play()">	
 		<div class="content">
-			<img src="https://phungnguyenlinhinfo.github.io/hidden/assets/images/avt.png" alt="">
+			<img src="." alt="">
 			<div class="content_r clearfix">
 				<div class="content_l clearfix">
 					<h2>Hà Đức Duy say hi to you <3</h2>
